--- a/studio/package.json
+++ b/studio/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "@sanity/base": "^1.150.8",
     "@sanity/cli": "^1.150.7",
-    "@sanity/components": "^1.150.8",
     "@sanity/code-input": "^1.150.8",
+    "@sanity/components": "^1.150.8",
     "@sanity/core": "^1.150.7",
     "@sanity/dashboard": "^1.150.8",
     "@sanity/default-layout": "^1.150.8",
@@ -26,6 +26,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "sanity-plugin-content-model-graph": "^1.1.1",
+    "sanity-plugin-dark-theme-blue": "^1.0.1",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.11",
     "sanity-plugin-dashboard-widget-netlify": "^1.0.1"
   },
