--- a/studio/package.json
+++ b/studio/package.json
@@ -22,6 +22,8 @@
     "@sanity/default-layout": "^1.150.8",
     "@sanity/default-login": "^1.150.1",
     "@sanity/desk-tool": "^1.150.8",
+    "@sanity/image-url": "^0.140.19",
+    "@sanity/vision": "^1.150.6",
     "date-fns": "^1.30.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -29,7 +31,8 @@
     "sanity-plugin-content-model-graph": "^1.1.1",
     "sanity-plugin-dark-theme-blue": "^1.0.1",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.11",
-    "sanity-plugin-dashboard-widget-netlify": "^1.0.1"
+    "sanity-plugin-dashboard-widget-netlify": "^1.0.1",
+    "sanity-plugin-seo-tools": "^1.0.6"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
