--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@sanity/cli": "^1.150.1",
-    "lerna": "^3.22.1"
+    "lerna": "^3.22.1",
+    "p5": "^1.1.9"
   }
 }
