--- a/studio/package.json
+++ b/studio/package.json
@@ -28,6 +28,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "sanity-plugin-content-model-graph": "^1.1.1",
     "sanity-plugin-dark-theme-blue": "^1.0.1",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.11",
